C is for Create is done

--- a/tutorial/1. Django project set up.md
+++ b/tutorial/1. Django project set up.md
@@ -65,11 +65,11 @@ Make sure you have a sensible `.gitignore` file. This should do the trick:
 ```
 venv/
 db.sqlite3
-tests/screenshots/
 __pycache__/
 *.pyc
 test-results/
 node_modules/
+.pytest_cache/
 ```
 
 ## Extra resources
