D is for delete

--- a/tutorial/0. Project_ideas.md
+++ b/tutorial/0. Project_ideas.md
@@ -19,3 +19,5 @@
 - digital library: free online courses 
 - knowledge management: Zettles + tags + ...
 - micro lending app ...
+
+It would be useful if the app you come up with is able to display a list of items, and it has a checkbox or similar for changing the state of the items or deleting the items without submitting a form.
