--- a/tutorial/10. R is for Read.md
+++ b/tutorial/10. R is for Read.md
@@ -4,4 +4,130 @@ Now you should have a whole lot of stuff in your database. But when you refresh 
 
 We need to update our page so that it fetches things from the database and displays them in the right place. 
 
-Head on over to the views.py file
+Let's start off with some tests.
+
+## Tests 
+
+When there are items in the database, we should see them as soon as the page loads. 
+
+Try to think of the test you would want to write on your own.
+
+Mine looks like this:
+
+```
+def test_display_one_item_on_first_load(live_server, page: Page):
+    TodoItem.objects.create(title="Test item")
+    page.goto(reverse_url(live_server, "index"))
+    page.wait_for_selector("text=Test item")  # select dom elements
+    expect(page.get_by_text("Nothing to see here...")).to_be_hidden()
+```
+
+Here we are interacting with our model in order to make a new item in the database. 
+
+Of course when we run the test, it will fail.
+
+## Now to make the tests pass
+
+Head on over to the views.py file.
+
+Add the following import to the top of your file:
+
+```
+from . import models
+```
+
+Now, inside the index function, we are going to query our database and add some more data to our template context.  Mine looks like this:
+
+```
+@require_http_methods(["GET"])
+def index(request):
+    form = forms.CreateTodoForm()
+    todos = models.TodoItem.objects.all()  # NEW
+    context = {"todo_items": todos, "form": form} # Added to the context
+    return render(request, "todos/index.html", context)
+```
+
+Now we need to update the index.html template so it renders the items.
+
+Find the element that you were using as the hx-target for your form. We're going to put some stuff in there.
+
+Mine looked like this before:
+
+```
+<div id="todo_items" />
+```
+
+We can use Django's template language to loop over the items we are passing to the template, and we can make use of our partial template from before:
+
+```
+<div id="todo_items">
+    {% for item in todo_items %}
+    
+    {% include "todos/partial_todo_item.html" %}
+    
+    {% endfor %}
+</div>
+
+```
+
+When we run the tests again you'll see that we are still failing because the "nothing to see" message is still showing up. The JavaScript function that shows and hides the message is only called when the element is mutated. 
+
+There are multiple ways to fix this. The easiest is to update your utils.js file:
+
+```
+window.onload = function () {
+    const targetNode = document.getElementById("todo_items");
+
+    const config = {
+        attributes: true,
+        childList: true,
+        subtree: true,
+    };
+
+    const observer = new MutationObserver(showOrHideEmptyMessage);
+
+    observer.observe(targetNode, config);
+
+    showOrHideEmptyMessage();   # NEW LINE
+};
+
+```
+
+## This looks terrible
+
+We are now in a good position to add some tailwind style to our list. Let's get things looking good. 
+
+My partial now looks like this:
+
+```
+<div
+    class="todo_item border-solid border border-green-100 rounded-lg shadow-md bg-white pl-4 pr-4 pt-2 pb-2 flex justify-between ">
+    <div>
+
+        <input type="checkbox" class="h-6 w-6 rounded border-green-300 text-green-600
+        accent-green-400 
+        cursor-pointer
+        inline-block align-middle
+        " />
+
+        <span class="inline-block align-middle px-2 font-semibold font-normal
+        "> {{ item.title }}</span>
+    </div>
+    <button
+        class="rounded bg-orange-600 px-2 py-1 text-xs font-semibold text-white shadow-sm hover:bg-orange-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-orange-600 inline-block align-middle">
+        Delete
+    </button>
+</div>
+```
+
+And I updated index.html so that there is a small space between the items:
+
+```
+<div id="todo_items" class="space-y-2">
+    {% for item in todo_items %}
+
+    {% include "todos/partial_todo_item.html" %}
+
+    {% endfor %}
+</div>
+```
