--- a/tutorial/0. Project_ideas.md
+++ b/tutorial/0. Project_ideas.md
@@ -1,5 +1,15 @@
 # Project ideas 
 
+You can follow along with the demo app exactly as is if you want to. You will get a lot out of it. But you will get more out of this experience if you build something of your own, if you apply the ideas and concepts in a novel situation instead of just following along.
+
+## Project requirements 
+
+Try to choose something with clear CRUD functionality. Crud stands for Create, Read, Update, Delete.  Most web applications are CRUDdy.
+
+Think about choosing an application where you will have a page for listing out items, a form for creating new items, a button for deleting them and a way to update them. 
+
+## Ideas
+
 - TODO for you: build your perfect ultimate todo list tracker
 - Recipe book
 - book tracker
@@ -20,4 +30,19 @@
 - knowledge management: Zettles + tags + ...
 - micro lending app ...
 
-It would be useful if the app you come up with is able to display a list of items, and it has a checkbox or similar for changing the state of the items or deleting the items without submitting a form.
+## Updating items 
+
+The example we will be using in this tutorial is a TODO app. This application will display a list of TODO items and the user will be able to click on checkboxes to mark things as done. It would be useful if your application also had a checkbox or similar so that we can play with "events" in the browser. 
+
+This is not critical, you will be able to learn the lessons without implementing every little thing yourself. But it would be nice if you could do this in your app.
+
+Here are some ways you might include a checkbox or button:
+
+- click on a star shaped checkbox to mark something as a favourite
+- click on an emoji to add a reaction to an item 
+- click on a button to "approve" an item
+- click on a button to change the state of an item (eg: books could go from unread to read to complete)
+- click on a widget to add a star rating to an item
+- click on a button to give a think a higher or lower priority 
+
+
