--- a/tutorial/10. R is for Read.md
+++ b/tutorial/10. R is for Read.md
@@ -12,6 +12,12 @@ When there are items in the database, we should see them as soon as the page loa
 
 Try to think of the test you would want to write on your own.
 
+Your test will need to:
+- create an item in the database. You'll need to use the Django ORM for this
+- visit the index page. You can do this in the usual way
+- make sure that the item is visible. You can use `page.wait_for_selector` for this
+- expect `Nothing to see` to be hidden
+
 Mine looks like this:
 
 ```
@@ -47,9 +53,9 @@ def index(request):
     return render(request, "todos/index.html", context)
 ```
 
-Now we need to update the index.html template so it renders the items.
+Now we need to update the `index.html` template so it renders the items.
 
-Find the element that you were using as the hx-target for your form. We're going to put some stuff in there.
+Find the element that you were using as the `hx-target` for your form. We're going to put some stuff in there.
 
 Mine looked like this before:
 
@@ -79,9 +85,7 @@ window.onload = function () {
     const targetNode = document.getElementById("todo_items");
 
     const config = {
-        attributes: true,
         childList: true,
-        subtree: true,
     };
 
     const observer = new MutationObserver(showOrHideEmptyMessage);
