--- a/tutorial/11. U is for update.md
+++ b/tutorial/11. U is for update.md
@@ -23,7 +23,7 @@ Take some time to think through the problem before you look at the answer. How w
 If we use the codegen to figure that out then we get some crazy looking code, for example:
 
 ```
-    page.locator("div:nth-child(3) > div > .h-6").check()
+page.locator("div:nth-child(3) > div > .h-6").check()
 ```
 
 Yuck.
@@ -38,11 +38,11 @@ Go to the partial template and add a testid to the checkbox. Mine looks like thi
 <input type="checkbox" class="h-6 w-6 rounded border-green-300 text-green-600
         accent-green-400 
         cursor-pointer
-        inline-block align-middle
-        " data-testid="toggle_item_{{ item.id }}" />
+        inline-block align-middle" 
+        data-testid="toggle_item_{{ item.id }}" />
 ```
 
-Note that the testid makes use of the item's database id. so every checkbox will have a unique testid.
+Note that the `testid` makes use of the item's database id. so every checkbox will have a unique `testid`.
 
 Now if we do the code gen thing again, it gives us code that looks more like this:
 
@@ -104,7 +104,7 @@ def action_toggle_todo(request, item_id):
     return HttpResponse('') 
 ```
 
-Let's see what happens if we return a blank response.  What do you think will happen?
+Let's see what happens if we return a blank response.  What do you think will happen? We'll find out later.
 
 ## The Url
 
@@ -132,11 +132,11 @@ hx-put="{% url 'action_toggle_todo' item.id %}"
 
 In your browser, open up the dev tools and watch the requests that are getting fired off from your application. When you check a box you'll get a 403 error. That's a permission denied error.
 
-This is happening because of a lack of CSRF token in the request. Remember how we added the token to the form as a hidden input? 
+This is happening because of a lack of CSRF token in the request. Remember how we added the token to the form as a hidden input? If you don't remember, go look closely at the `form` section of your `index.html` page.
 
-GET requests do not need a CSRF token. Everything else does. 
+`GET` requests do not need a CSRF token. `POST`, `PUT` and `DELETE` requests do. 
 
-Go to your index.py file and add an attribute to your body tag. It should look like this:
+Go to your `index.py` file and add an attribute to your body tag. It should look like this:
 
 ```
 <body hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
@@ -144,16 +144,15 @@ Go to your index.py file and add an attribute to your body tag. It should look l
 
 Now try again. The permission error is gone. And the tests all pass.
 
-What do you think will happen if we remove the `{% csrf_token %}` hidden input from the form? Will it still work?
+What do you think will happen if we remove the `{% csrf_token %}` hidden input from the `<form>`? Will it still work?
 
-Go find out.
-
+Go find out. You can find out by deleting it and running your tests.
 
 ## Using TDD to squash bugs 
 
 There is a bug! Can you see it?
 
-A really great way to fight bugs and prevent regressions is to write a test that exposes the bug and then make the test pass.
+A really great way to fight bugs and prevent regressions is to write a test that exposes the bug and then make the test pass. 
 
 Our bug becomes obvious if we check some boxes and then refresh the page. All the checkboxes remain unchecked. 
 
@@ -174,7 +173,6 @@ def test_checkbox_loads_correctly(live_server, page: Page):
     expect(page.get_by_test_id(checkbox_id)).to_be_checked()
 ```
 
-
 Now, to make the test pass, we update the partial template. The checkbox should now look like this:
 
 ```
@@ -187,6 +185,6 @@ Now, to make the test pass, we update the partial template. The checkbox should 
 
 ```
 
-If you get weird template rendering errors it can be because of an autoformatter messing up your template tags.
+If you get weird template rendering errors it can be because of an autoformatter messing up your template tags. 
 
 Now the test passes!
