--- a/tutorial/12. D is for Delete.md
+++ b/tutorial/12. D is for Delete.md
@@ -8,7 +8,7 @@ The difference is that we will need to remove the item from the gui once it is d
 
 Writing the test for this will require you to go through many of the same motions as we did for the Update test, so we wont go through it in detail. 
 
-As usual, you can use codegen to figure out how to target different elements in the page.
+As usual, you can use codegen to figure out how to target different elements in the page. Poke around and see if you can figure it out.
 
 My test looks like:
 
@@ -41,7 +41,7 @@ def action_delete_todo(request, item_id):
     return HttpResponse("")
 ```
 
-The url is also qute similar to something we have seen:
+The url is also quite similar to something we have seen:
 
 ```
     path("action_delete_todo/<int:item_id>", views.action_delete_todo, name="action_delete_todo"),
