--- a/tutorial/13. There's more.md
+++ b/tutorial/13. There's more.md
@@ -4,7 +4,7 @@ We have covered the basics. We know how to build cruddy things with HTMX.
 
 But there is more to do. We haven't touched on Alpine.JS yet and that is a very powerful tool. 
 
-There are also many common patterns we haven't used yet, for example pagination, toasts/popups/modals, confirmation dialogues, hydration, editing, form errors, web-components, filtering, etc. 
+There are also many common patterns we haven't used yet, for example pagination, toasts/popups/modals, confirmation dialogues, hydration, editing, form errors, web-components, filtering, responsiveness, etc. 
 
 We also took a shortcut when we installed tailwind and there are better ways to do things. 
 
