--- a/tutorial/2. Setting up an app.md
+++ b/tutorial/2. Setting up an app.md
@@ -1,6 +1,6 @@
 # Your first app 
 
-In the last step, you made a Django Project. Now you'll make an app inside that project. 
+In the last step, you made a Django Project. Now you'll make an app inside that project. I've named my app "todos". You can name yours something else.
 
 ```
 python manage.py startapp todos
@@ -25,7 +25,7 @@ Go to your project's `settings.py` file. Now add your app to the `INSTALLED_APPS
 Eg:
 ```
 INSTALLED_APPS = [
-    "todos",    # <<<<<<<<< new line
+    "todos",    # <<<<<<<<<  new line. Put your app there
     "django.contrib.admin",
     "django.contrib.auth",
     "django.contrib.contenttypes",
@@ -45,10 +45,10 @@ Paste this in and save the file:
 from django.http import HttpResponse
 
 def home(request):
-    return HttpResponse("Hello there")
+    return HttpResponse("Hello world")
 ```
 
-Now make a new file in your app called urls.py. This file should be in the same directory as the views.py file you just worked with.
+Now make a new file in your app called `urls.py`. This file should be in the same directory as the views.py file you just worked with.
 
 Now we need to wire things up so that the project knows about the new url configuration.
 
@@ -68,8 +68,9 @@ urlpatterns = [
 
 Refresh the webpage and you'll now see your hello-world page.
 
-
 # Extra resources
 
-Learn more about url configuration here: https://docs.djangoproject.com/en/5.1/topics/http/urls/ 
+You can learn more about url configuration here: https://docs.djangoproject.com/en/5.1/topics/http/urls/
+
+You don't need to be a url configuration ninja to complete this tutorial.
 
