--- a/tutorial/3. Hello Playwright.md
+++ b/tutorial/3. Hello Playwright.md
@@ -1,6 +1,10 @@
 # Hello Playwright 
 
-We will now install playwright and write our first test.
+We will now install Playwright and write our first test.
+
+We'll be following the test driven development (TDD) methodology - we'll write a test that fails, then we'll implement the code to make it pass. TDD is very much worth knowing about. 
+
+## First, install Playwright
 
 ```
 pip install pytest-playwright
@@ -11,7 +15,7 @@ You might be prompted to install some extra dependencies.
 
 ## Note
 
-Django uses unit test by default. We are going to be using Pytest instead because pytest-playwright has a lot of functionality.
+Django uses unittest by default. We are going to be using Pytest instead because pytest-playwright has a lot of functionality. Writing that functionality ourselves would be a bit of a pain.
 
 We'll need to install this as well:
 
@@ -31,7 +35,11 @@ env =
 
 ```
 
-Make sure you replace `yata` with your own project name
+Make sure you replace `yata` with your own project name.
+
+Pytest env made the `env =` section of your new ini file work. It lets you set up environmental variables for your tests. 
+
+The `DJANGO_ALLOW_ASYNC_UNSAFE` variable is necessary for Playwright to work with the Django project.
 
 ## Write a test 
 
@@ -41,7 +49,6 @@ In your app directory, do the following:
 - make a new directory called 'tests'
 - create a new file inside the tests directory called `test_todos.py` or similar. 
 - paste the following code into the file:
-
 
 ```
 def test_display_empty_list_on_first_load(live_server, page: Page):
@@ -60,6 +67,15 @@ def reverse_url(
     return f"{live_server.url}{end}"
 ```
 
+Generally, having one tests.py file is not enough. It's often useful to have multiple test files. That is why we delete tests.py and create a directory for our tests.
+
+The other possibly confusing thing is the `reverse_url` function. In our tests, we will need to be able to access different urls. Hardcoding urls (editing them out by hand) is bad practice for many reasons. This function will make it easier for us to write our tests.
+
+In our first test we have `url = reverse_url(live_server, "index")`.  This makes use of the url configuration to figure out the final url.
+
+We included the `reverse_url` function in our test file because it was convenient to put it there. Once the app gets a little bigger it would be useful to move the function somewhere else so that it can be re-used.
+
+
 ## Run your tests
 
 ```
@@ -68,7 +84,38 @@ pytest
 
 You'll get a failure because of the NameError. This means everything is wired up correctly.
 
-Now remove the NameError and run the tests again.
+Now remove the NameError and run the tests again. 
 
 The test takes a little bit of time to run. Why is that?
 
+The test will still fail. The next thing we will do is make it pass.
+
+## Keeping track of the things you installed 
+
+You installed Django, pytest, playwright, and a bunch of other things. If someone else were to try to run your application, they would need to install the same things.
+
+This is where a requirements.txt  file comes in.
+
+Many people will run this command to create a requirements.txt file:
+
+```
+pip freeze > requirements.txt
+```
+
+But this has it's downsides.
+
+Rather:
+
+use `pip freeze` to see a list of all the installed packages. Identify the ones that you installed by typing `pip install ...`. Gather those and put them in your requirements.txt file.
+
+Mine looks like:
+
+```
+Django==5.1.1
+django-browser-reload==1.15.0
+playwright==1.47.0
+pytest==8.3.3
+pytest-django==4.9.0
+pytest-env==1.1.4
+pytest-playwright==0.5.2
+```
