--- a/tutorial/4. Templates.md
+++ b/tutorial/4. Templates.md
@@ -17,22 +17,21 @@ from django.views.decorators.http import require_http_methods
 def index(request):
 
     return render(request, "todos/index.html")
-
 ```
 
-Now this part is weird. Django has an unusual way of organising templates.
+Now this part is weird. Take a moment to prepare yourself emotionally. Django has an unusual way of organising templates.
 
 Inside your app create a directory called `templates`. Then inside the `templates` directory make a new directory with the name of your app. Then inside that directory create a file called `index.html`
 
 ```
-todos
+todos <<< this is your app name
 │   ├── admin.py
 │   ├── apps.py
 │   ├── __init__.py
 │   ├── migrations
 │   ├── models.py
-│   ├── templates
-│   │   └── todos
+│   ├── templates   <<< make this directory
+│   │   └── todos   <<< then this one. Same name as your app name
 │   │       └── index.html <<<<<<< like so
 │   ├── tests
 │   │   └── test_todos.py
@@ -40,7 +39,7 @@ todos
 │   └── views.py
 ```
 
-index.html should look something like this:
+`index.html` should look something like this:
 
 ```
 <html lang="en">
