--- a/tutorial/5. Tailwind.md
+++ b/tutorial/5. Tailwind.md
@@ -7,7 +7,7 @@ Let's spice things up with Tailwind.
 Add the following into the `head` of your index.html file:
 
 ```
-    <script src="https://cdn.tailwindcss.com"></script>
+<script src="https://cdn.tailwindcss.com"></script>
 ```
 
 Now refresh your page. You'll notice that things look a little different. Tailwind baselines all the styles so you can build up from a good foundation.
@@ -44,11 +44,17 @@ Let's add some style. Update your index.html page so it looks like this:
 
 Now refresh your page. It looks much better, right?
 
-## Side quest: Auto refresh 
+## Make it pretty 
 
-This is a good time to play with Tailwind for a bit. You can find the docs [here](https://tailwindcss.com/docs/utility-first).
+This is a good time to play with Tailwind for a bit. This is not critical at this point but it could be nice for you to get a feel for what it can do. 
+
+You can find the docs [here](https://tailwindcss.com/docs/utility-first).
 
 Try tweak things and see what you can change. Change the heading size, the colour, whatever you want.
+
+You are welcome to ask an LLM for support on this. 
+
+## Side quest: Auto refresh 
 
 You'll notice that as you change things you need to manually refresh your browser to see what you have done. This is tedious. 
 
