--- a/tutorial/8. Form submission.md
+++ b/tutorial/8. Form submission.md
@@ -50,15 +50,12 @@ def action_add_new_todo(request):
 
 ```
 
-Usually when working with Django forms we do things differently. Usually you'll render a blank form if there is a GET request, and then if it's a POST request we'll do some form validation. If there are form errors we'll deal with those. 
-
-For now we are keeping things as simple as possible so that we can focus on the stars of the show.
+Usually when working with Django forms we do things differently. Usually you'll render a blank form if there is a GET request, and then if it's a POST request we'll do some form validation and then deal with the form data. If you are using HTMX it's useful to do things slightly differently to keep things neat and explicit.
 
 Now we need to add the view to our app's urls.py file:
 
 ```
-    path("action_add_new_todo", views.action_add_new_todo, name="action_add_new_todo"),
-
+path("action_add_new_todo", views.action_add_new_todo, name="action_add_new_todo"),
 ```
 
 ## Template edits
@@ -82,8 +79,10 @@ Next, we'll need a place to put our items when they show up. We need a dom eleme
 Put something like this in the body of your html:
 
 ```
-        <div id="todo_items" />
+<div id="todo_items" />
 ```
+Pay special attention to the `id` attribute here. You'll need this value later.
+
 
 Mine ends up looking like this:
 
@@ -115,6 +114,8 @@ Now we need to make sure that when the form is submitted it does the right thing
                         class="rounded bg-green-600 px-2 py-1 text-xs font-semibold text-white shadow-sm hover:bg-green-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-green-600">
                 </form>
 ```
+
+Read the HTMX docs to see if you can understand what `hx-post`, `hx-target` and `hx-swap` do.
 
 Try submitting your form and see what it does. 
 
