--- a/tutorial/9. Nothing to see here.md
+++ b/tutorial/9. Nothing to see here.md
@@ -57,7 +57,6 @@ else
 
 In order to do this in JavaScript, we will need to be able to select the correct dom elements.
 
-
 Open up index.html and update the div that contains the message by giving it an id. We'll need that so we can interact with it.
 
 Mine now looks like this:
@@ -109,13 +108,11 @@ Add this to your utils.js file:
 
 ```
 window.onload = function () {
-    // note the ID here. It is the target from the form's htmx post
+    // note the ID here. It is the target from our form's htmx post
     const targetNode = document.getElementById("todo_items");
 
     const config = {
-        attributes: true,
         childList: true,
-        subtree: true,
     };
 
     const observer = new MutationObserver(showOrHideEmptyMessage);
