--- a/tutorial/6. C is for Create.md
+++ b/tutorial/6. C is for Create.md
@@ -39,9 +39,9 @@ For the purposes of this tutorial, we'll just make one model. Nothing too fancy.
 
 ## Make a form 
 
-Inside your app, make a new file called forms.py. Here you will define a form for creating an instance of your thingie. 
+Inside your app, make a new file called `forms.py`. Here you will define a form for creating an instance of your thingie. 
 
-My forms.py file looks like this:
+My `forms.py` file looks like this:
 
 ```
 from . import models
@@ -53,6 +53,8 @@ class CreateTodoForm(ModelForm):
         model = models.TodoItem
         fields = ["title"]
 ```
+
+This is intentionally a very simple form. Our model has a title and a description, but we have decided to make a form that only asks for a title. 
 
 Now go to your views.py file, import your form, and pass it into the render function like so:
 
@@ -73,7 +75,9 @@ def index(request):
 
 Now we need to get the form to show up on our web page.  To do that we need to update index.html.
 
-Mine now looks like this
+Mine now looks like this:
+
+(Pay special attention to the `<form>` tag and what is inside it.)
 
 ```
 <html lang="en">
@@ -83,7 +87,6 @@ Mine now looks like this
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Things to do</title>
     <script src="https://cdn.tailwindcss.com"></script>
-
 </head>
 
 <body>
