--- a/tutorial/7. Test the create form.md
+++ b/tutorial/7. Test the create form.md
@@ -2,7 +2,9 @@
 
 How do we want this form to work? We want to fill it in, submit it and then a new item should appear on our page. And the "nothing to see here" message should disappear. 
 
-Let's write some tests and then make them pass.
+Let's write some tests and then make them pass. (remember TDD?)
+
+We will use Playwright's code generator to help us figure out what to write.
 
 Execute the following: 
 
@@ -19,7 +21,7 @@ You want to:
 3. Assert that "Nothing to see..." is no longer visible 
 4. Assert that the thing you created shows up 
 
-Try it out before looking at the code below:
+Try it out for yourself before looking at the code below:
 
 I added the following 2 tests:
 
@@ -72,4 +74,4 @@ Then try to run the tests again. Now they are failing nicely :)
 
 ## Extra resources 
 
-Django's migration feature is really useful and hardcore. Learn more about them here: https://docs.djangoproject.com/en/5.1/topics/migrations/
+Django's migration feature is really useful and hardcore. Learn more about it here: https://docs.djangoproject.com/en/5.1/topics/migrations/
