updated youtube links

--- a/tutorial/1. What are we building.md
+++ b/tutorial/1. What are we building.md
@@ -2,15 +2,14 @@
 
 At this point, if this is a live event, your instructor should take you though a demo and introduce the different technologies. 
 
-You are also welcome to watch this video. This demo gives a tour of the technologies we are using. 
+You are also welcome to watch [this](https://www.youtube.com/live/limx6x6-D9Q?si=KDnU8A7Ofk04zD57&t=2987
+) video. This demo gives a tour of the technologies we are using. 
 
 Most of them anyway.
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/limx6x6-D9Q?si=MWh7nL8sYxB0oVQ3&amp;start=2987" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+And [this one](https://www.youtube.com/watch?v=rrliP18nIig
+) focuses on the testing part.
 
-And this one focuses on the testing part.
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/rrliP18nIig?si=Az8zfYcKSOYoASo1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 ## CRUD 
 
