--- a/tutorial/0. Intro to tutorial.md
+++ b/tutorial/0. Intro to tutorial.md
@@ -24,7 +24,7 @@ But if you want more, if you want to retain the ideas and have a more engaging e
 
 Try to pick a project to work on that is your own. If you are new to this career then this could turn into a portfolio project. Or maybe there is a fun side project you have been thinking about. 
 
-There is a list of project ideas in the file: [A0. Project ideas](A0. Project ideas) 
+There is a list of project ideas in the file: [Appendix: Project ideas](./Appendix:%20Project%20ideas.md) 
 
 If you are not sure what to choose right now, wait until after the section about CRUD.
 
