added links to README

--- a/tutorial/15. Responsive header with Tailwind and Alpine.md
+++ b/tutorial/15. Responsive header with Tailwind and Alpine.md
@@ -183,3 +183,12 @@ Here is a full example for reference.
     </div>
 </div>
 ```
+
+## Challenge yourself 
+
+Here are a few things you can do to push your knowledge a little further:
+
+1. See if you can get the menu button to look different depending on whether the menu is open or closed. Maybe use up and down arrows, or change the text on the button, or use icons. 
+
+2. See if you can find a way to make the navigation more DRY. Every menu link is repeated and that is a pain! Can you put the menu items in a data structure and loop over it? Where should you put the data structure?
+
