urls.py tutorial fix

--- a/tutorial/03. Setting up an app.md
+++ b/tutorial/03. Setting up an app.md
@@ -50,6 +50,20 @@ def home(request):
 
 Now make a new file in your app called `urls.py`. This file should be in the same directory as the views.py file you just worked with.
 
+Put this inside the file:
+
+```
+from django.urls import path
+
+from . import views
+
+urlpatterns = [
+    path("", views.index, name="index"),
+]
+```
+
+You will be adding to this over time as you create more views.
+
 Now we need to wire things up so that the project knows about the new url configuration.
 
 Go to your project's main configuration file. It'll already have a bunch of stuff written in there.
