tut fix - import reverse from Django

--- a/tutorial/04. Hello Playwright.md
+++ b/tutorial/04. Hello Playwright.md
@@ -51,9 +51,8 @@ In your app directory, do the following:
 - paste the following code into the file:
 
 ```
+from django.urls import reverse
 from playwright.sync_api import Page
-
-
 
 def test_display_empty_list_on_first_load(live_server, page: Page):
     url = reverse_url(live_server, "index")
