tut fix: index not home

--- a/tutorial/03. Setting up an app.md
+++ b/tutorial/03. Setting up an app.md
@@ -44,7 +44,7 @@ Paste this in and save the file:
 ```
 from django.http import HttpResponse
 
-def home(request):
+def index(request):
     return HttpResponse("Hello world")
 ```
 
