pip install ... confuses people

--- a/tutorial/04. Hello Playwright.md
+++ b/tutorial/04. Hello Playwright.md
@@ -109,7 +109,11 @@ But this has it's downsides.
 
 Rather:
 
-use `pip freeze` to see a list of all the installed packages. Identify the ones that you installed by typing `pip install ...`. Gather those and put them in your requirements.txt file.
+Use `pip freeze` to see a list of all the installed packages. 
+
+Think back to all the things you installed using `pip install`. Do not type in `pip install` at this point. Be careful about simply copy-pasting things from a tutorial without reading the sentence. 
+
+Look through the output from pip freeze and identify the things you explicitly installed. Copy those lines and put them into a new file called `requirements.txt`.
 
 Mine looks like:
 
