made codegen instructions clearer

--- a/tutorial/12. U is for update.md
+++ b/tutorial/12. U is for update.md
@@ -44,7 +44,7 @@ Go to the partial template and add a testid to the checkbox. Mine looks like thi
 
 Note that the `testid` makes use of the item's database id. so every checkbox will have a unique `testid`.
 
-Now if we do the code gen thing again, it gives us code that looks more like this:
+Now if we use `playwright codegen` again, we can poke around and get some code that looks more like this:
 
 ```
 page.get_by_test_id("toggle_item_4").check()
