minor changes and polish

--- a/tutorial/04. Hello Playwright.md
+++ b/tutorial/04. Hello Playwright.md
@@ -85,9 +85,9 @@ We included the `reverse_url` function in our test file because it was convenien
 pytest
 ```
 
-You'll get a failure because of the NameError. This means everything is wired up correctly.
+You'll get a failure because of the `NameError`. This means everything is wired up correctly.
 
-Now remove the NameError and run the tests again. 
+Now remove the `NameError` and run the tests again. 
 
 The test takes a little bit of time to run. Why is that?
 
