--- a/tutorial/09. Form submission.md
+++ b/tutorial/09. Form submission.md
@@ -39,7 +39,7 @@ Since I am building a TODO list, I have a checkbox. I also want to display each 
 
 Now I need a view. It will receive the POST data from the form, create an item, and render the template.
 
-My view looks like this:
+My view function looks like this:
 
 ```
 @require_http_methods(["POST"])
