--- a/tutorial/12. U is for update.md
+++ b/tutorial/12. U is for update.md
@@ -136,7 +136,7 @@ This is happening because of a lack of CSRF token in the request. Remember how w
 
 `GET` requests do not need a CSRF token. `POST`, `PUT` and `DELETE` requests do. 
 
-Go to your `index.py` file and add an attribute to your body tag. It should look like this:
+Go to your `index.html` file and add an attribute to your body tag. It should look like this:
 
 ```
 <body hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
