--- a/tutorial/13. D is for Delete.md
+++ b/tutorial/13. D is for Delete.md
@@ -24,10 +24,17 @@ def test_delete_item(live_server, page: Page):
 
     with pytest.raises(models.TodoItem.DoesNotExist):
         models.TodoItem.objects.get(id=item.id)
-
 ```
 
-Now to make it pass.
+Pay close attention to this line:
+
+```
+expect(page.get_by_test_id("todo_items")).not_to_contain_text("Test item")
+```
+
+We are using the function `get_by_test_id`. So we need to make sure that the div we are targetting has the correct `test_id`. 
+
+Now let's make the test pass.
 
 ## View and url
 
@@ -47,6 +54,13 @@ The url is also quite similar to something we have seen:
     path("action_delete_todo/<int:item_id>", views.action_delete_todo, name="action_delete_todo"),
 
 ```
+
+You will also need to add this import to the top of the file:
+
+```
+from django.http import HttpResponse
+```
+
 ## The frontend 
 
 When the delete button is clicked then we want to send a delete request. So we use:
@@ -68,3 +82,4 @@ Lastly, we need to make sure we swap out the entire element, not just what is in
 ```
 hx-swap="outerHTML"
 ```
+
