minor polish on playwright install

--- a/tutorial/04. Hello Playwright.md
+++ b/tutorial/04. Hello Playwright.md
@@ -11,7 +11,12 @@ pip install pytest-playwright
 playwright install
 ```
 
-You might be prompted to install some extra dependencies.
+You might be prompted to install some extra dependencies. If you are then do this:
+
+```
+playwright install-deps  
+playwright install
+```
 
 ## Note
 
@@ -111,7 +116,7 @@ Rather:
 
 Use `pip freeze` to see a list of all the installed packages. 
 
-Think back to all the things you installed using `pip install`. Do not type in `pip install` at this point. Be careful about simply copy-pasting things from a tutorial without reading the sentence. 
+Think back to all the things you installed using `pip install ???`. Do not type in `pip install ???` at this point. Be careful about simply copy-pasting things from a tutorial without reading the sentence. 
 
 Look through the output from pip freeze and identify the things you explicitly installed. Copy those lines and put them into a new file called `requirements.txt`.
 
