--- a/tutorial/03. Setting up an app.md
+++ b/tutorial/03. Setting up an app.md
@@ -66,7 +66,7 @@ You will be adding to this over time as you create more views.
 
 Now we need to wire things up so that the project knows about the new url configuration.
 
-Go to your project's main configuration file. It'll already have a bunch of stuff written in there.
+Go to your project's main configuration file (`settings.py`). It'll already have a bunch of stuff written in there.
 
 Edit it so it is more like this:
 
