--- a/tutorial/10. Nothing to see here.md
+++ b/tutorial/10. Nothing to see here.md
@@ -18,7 +18,7 @@ This weirdness should feel pretty familiar. It's a similar pattern to what you d
 │   │       └── partial_todo_item.html
 ```
 
-Inside utils.py do the following:
+Inside utils.js do the following:
 
 ```
 alert("Hello static files")
